v0.5.0/_sources/projections/cyl/cyl_transverse_mercator.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_transverse_mercator.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_transverse_mercator.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_transverse_mercator.py:


Transverse Mercator
===================

The transverse Mercator was invented by Johann Heinrich Lambert in 1772. In
this projection the cylinder touches a meridian along which there is no
distortion. The distortion increases away from the central meridian and goes to
infinity at 90° from center. The central meridian, each meridian 90° away from
the center, and equator are straight lines; other parallels and meridians are
complex curves.

**t**\ *lon0/*\ [*lat0/*\ ]\ *scale* or **T**\ *lon0/*\ [*lat0/*\ ]\ *width*

The projection is set with **t** or **T**. The central meridian is set
by  *lon0*, the latitude of the origin is set by the optional *lat0*, and the
figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 18-30



.. image-sg:: /projections/cyl/images/sphx_glr_cyl_transverse_mercator_001.png
   :alt: cyl transverse mercator
   :srcset: /projections/cyl/images/sphx_glr_cyl_transverse_mercator_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        region=[20, 50, 30, 45],
        projection="T35/12c",
        land="lightbrown",
        water="seashell",
        shorelines="thinnest",
        frame="afg",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.998 seconds)


.. _sphx_glr_download_projections_cyl_cyl_transverse_mercator.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_transverse_mercator.py <cyl_transverse_mercator.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_transverse_mercator.ipynb <cyl_transverse_mercator.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
